# cl_sync

./: .gitignore  Cargo.toml  rclone_cms.md  upload.toml
claptst/: Cargo.toml
src/: cl_sync.rs  cli.rs  error.rs  main.rs  operations.rs
src/cl_sync/: cache.rs  upload.rs
src/operations/: cl_sync_cache.rs  rclone.rs  sys_ops.rs  toml.rs
