[package]
name = "cl_sync"
version = "2.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["serde"]}
clap = "4.5.21"
clap_complete = "4.5.38"
directories = "5.0.1"
futures = "0.3.31"
hashbrown = {version = "0.15.1", features = ["serde"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
