[package]
name = "cl_sync"
version = "2.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-recursion = "1.1.1"
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["serde"]}
clap = "4.5.21"
clap_complete = "4.5.38"
directories = "5.0.1"
futures = "0.3.31"
hashbrown = { version = "0.15.1", features = ["serde"] }
home = "0.5.11"
indicatif = "0.17.11"
indoc = "2.0.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.11"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
